--- a/views/app.mustache
+++ b/views/app.mustache
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Derp</title>
   </head>
   <body>
 <form class="testForm" action="/api/todos" method="post">
